# doorrl

./: .gitignore  README.md  analyze_ablation.py  plot_training_curve.py  pyproject.toml  requirements.txt  run_stage0_table3.py  run_stage1_table4.py  train_ablation.py  train_debug.py  train_experiment.py  train_fixed.py  train_large_scale.py  train_real_nuscenes.py
configs/: debug_mvp.json  experiment_baseline.json  experiment_large_scale.json  experiment_obs_only.json  experiment_safe.json  nuplan_stack_template.json
docs/: EXPERIMENT_STARTUP_GUIDE.md  FINAL_NAN_ANALYSIS.md  NAN_FIX_PROGRESS.md  NAN_FIX_REPORT.md  REAL_DATA_PIPELINE.md  SERVER_HANDOFF.md  TOKENIZATION_SPEC.md  stage0.md  stage1_design.md  stage1_pilot.md
scripts/: aggregate_fix2_seeds.py  build_token_cache.py  diagnose_selection.py  extract_slot_selections.py  plot_slot_distribution.py  plot_slot_scenes.py  plot_stage0_variance.py  run_decoupled_3seeds.sh  run_fast_3seeds.sh  run_fix2_3seeds.sh  run_stage1_pilot.sh  run_stage1_pilot_v3.sh  run_stage1_pilot_y.sh
src/doorrl/: __init__.py  config.py  schema.py  utils.py
src/doorrl/adapters/: __init__.py  base.py  navsim_adapter.py  nuplan_adapter.py  nuplan_preprocessed_adapter.py  nuplan_real_adapter.py  nuscenes_action_extractor.py  nuscenes_adapter.py  nuscenes_real_adapter.py
src/doorrl/data/: __init__.py  nuplan_dataset.py  real_dataset.py  synthetic.py
src/doorrl/evaluation/: __init__.py  metrics.py  stage1_metrics.py  table3_metrics.py
src/doorrl/imagination/: __init__.py  imagination.py  (+1 more)
tests/: test_adapters.py  test_forward.py
(+12 files in other folders)
