[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doorrl"
version = "0.1.0"
description = "Minimal DOOR-RL scaffold for object-relational driving world models."
requires-python = ">=3.9"
dependencies = [
  "torch>=2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
